--- a/index.html
+++ b/index.html
@@ -3,6 +3,12 @@
   <head>
     <meta charset="utf-8">
     <title>Project</title>
+    <style>
+    body{
+  margin: 0px;
+  padding: 0px;
+}
+    </style>
   </head>
   <body>
     <div id="app"></div>
